fix: menu overlap

--- a/packages/components/src/PostListEditDisplay/PostListEditDisplay.module.css
+++ b/packages/components/src/PostListEditDisplay/PostListEditDisplay.module.css
@@ -2,7 +2,7 @@
 
 .menus {
     position: sticky;
-    top: 92px;
+    top: 130px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
